discussion/kv_engine/171412/171412_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30941: make unlocked functions take lock ref

Prefer that an unlocked function takes a reference to the required
lock in input. This doesn't completely resolve concurrent access issues
(e.g., there is no check that the right lock has been obtained), but
it is nonetheless a good reminder for callers.

Change-Id: I8289e6d61accdd9971b3a758b8b29085e0332b86

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-03-01 11:24:14.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-01 11:40:32.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15862/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15862/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15862/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14708/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37279/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16688/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5515/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5574/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17624/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17951/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18658/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26023/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-03-01 11:45:46.000000000
Message: 
Patch Set 4: Code-Review-2

(1 comment)
Line:2, /COMMIT_MSG -> This should be a full name

----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-03-01 12:07:46.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-03-01 12:09:21.000000000
Message: 
Patch Set 4:

(1 comment)
File Comment: /PATCHSET_LEVEL -> Removed Build Bot -1 as failure is unrelated and to do with CMakeFile inclusions (discussed with Richard)
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-03-01 12:09:32.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/289487/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-03-01 15:10:56.000000000
Message: 
Patch Set 4:

(1 comment)
Line:2, /COMMIT_MSG -> Ack

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-03-02 11:08:01.000000000
Message: 
Patch Set 4: -Code-Review

(1 comment)
Line:2, /COMMIT_MSG -> I'll remove my -2 for this one off exception to the rule for external parties to be able to do traceability for the code.

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-02 11:20:34.000000000
Message: 
Patch Set 4: Verified+1 Code-Review+2

(1 comment)
File Comment: /PATCHSET_LEVEL -> Single CV failure is in clang-tidy with a known issue about it not handling the hdr_histgram headers correctly. 
----------------------------------------------------------------------------------------------------------------------
